# qt_mvc_test

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
3rd/: CMakeLists.txt
3rd/event_bus/: CMakeLists.txt  README.MD  SignalSlot.h  event_bus.cpp  event_bus.h  noncopyable.h
3rd/type_event_system/: CMakeLists.txt  type_event_system.cpp  type_event_system.h
build-qt_mvc_test-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qt_mvc_test.exp  qt_mvc_test.lib
build-qt_mvc_test-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cache-v2-e3b17296b4346690b72c.json  cmakeFiles-v1-2713060ca699595e6ff8.json  codemodel-v2-1fe3d37f0a3f364e4adb.json  directory-src.module-Debug-cad9ec70abdcc74f2b2e.json  directory-src.module.event_bus-Debug-58192b0f3f08d011b7d8.json  index-2023-04-10T08-26-54-0980.json  target-event_bus-Debug-aa652efe1a54ed2bd932.json  target-event_bus_autogen-Debug-2b1be3842de400270ab3.json  target-event_bus_autogen_timestamp_deps-Debug-5f82ec68678eff9db632.json  target-qt_mvc_test-Debug-493ba24d0413bec06623.json  target-qt_mvc_test_autogen_timestamp_deps-Debug-fa233a37df31747b291c.json
build-qt_mvc_test-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-5608387f17fca375025a.json  cmakeFiles-v1-90cb09b7e3b4a7465e98.json  codemodel-v2-3e5a6ac5441130e14b9c.json  index-2023-04-10T08-06-24-0244.json  target-qt_mvc_test-Debug-91074e465fff3093a7e0.json  target-qt_mvc_test_autogen-Debug-69b23bc622ee0697768f.json  target-qt_mvc_test_autogen_timestamp_deps-Debug-93aeafa3b93541d127a7.json
build-qt_mvc_test-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
build-qt_mvc_test-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/qt_mvc_test_autogen/: deps  mocs_compilation.cpp
build-qt_mvc_test-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/qt_mvc_test_autogen/3JYSCEOBDA/: moc_main_window.cpp.d
build-qt_mvc_test-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/src/module/: cmake_install.cmake
build-qt_mvc_test-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/src/module/event_bus/: cmake_install.cmake  event_bus.lib
build-qt_mvc_test-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/src/module/event_bus/event_bus_autogen/: deps
src/: main.cpp
src/base/: ioc_container.h
src/dao/: student_dao.cpp  student_dao.h
src/event/: hello_event.hpp
src/model/: student.h
src/module/: CMakeLists.txt
src/module/event_bus/: event_bus.h
src/view/: main_window.cpp  main_window.h
